Fixed gap on blog detail page ...which was overlapped by header

--- a/blog_app/static/blog_app/blog_detail.css
+++ b/blog_app/static/blog_app/blog_detail.css
@@ -20,6 +20,10 @@ html, body{
     clear: both;
 }
 
+.m-top-100{
+    margin-top: 100px;
+}
+
 /* Post Heading */
 .post-heading{
     padding: 5px;
